welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: type mismatch;
 found   : Int
 required: Boolean
	if (ado(a)){
                ^loneTeen:3: error: type mismatch;
 found   : Int
 required: Boolean
		if(ado(b)){
                       ^loneTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ado(a)){
        ^loneTeen:14: error: type mismatch;
 found   : Int(13)
 required: Boolean
	if (c>13 && c<19){
              ^